--- a/css/styles.css
+++ b/css/styles.css
@@ -172,6 +172,7 @@ body {
 }
 
 .hero-btn {
+    margin: 0 auto ;
     font-family: Roboto;
     background-color: #2196F3;
     font-weight: 700;
@@ -182,11 +183,10 @@ body {
     text-align: center;
     letter-spacing: 0.06em;
     color: var(--header-text-color);
-    margin: 0 auto ;
     border-radius: 4px;
     min-width: 200px;
     min-height: 50px;
-    padding: 10px 32px;
+    justify-content: center;
 }
 .hero-btn:hover,
 .hero-btn:focus{
@@ -529,6 +529,57 @@ body {
     fill: #ffffff
 }
 
+.subscribe-form {
+    display: flex;
+}
+
+.subscribe-title {
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 1.14;
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
+    color: var(--header-text-color);
+    margin-bottom: 20px;
+}
+
+.email {
+    min-width: 358px;
+    min-height: 50px;
+    border: 1px solid rgba(255, 255, 255, 0.3);
+    box-sizing: border-box;
+    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+    border-radius: 4px;
+
+}
+
+.subscribe-btn {
+    font-family: Roboto;
+    background-color: #2196F3;
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 1.87;
+    display: flex;
+    align-items: center;
+    text-align: center;
+    letter-spacing: 0.06em;
+    color: var(--header-text-color);
+    border-radius: 4px;
+    min-width: 200px;
+    min-height: 50px;
+    justify-content: center;
+    margin-left: 12px;
+}
+.subscribe-btn:hover,
+.subscribe-btn:focus{
+    background-color: #188ce8;
+}
+
+.subscribe-icon {
+    margin-left: 10px;
+}
+
+
 /*---------------------PORTFOLIO--------------------- */
 
 .portfolio-container{
@@ -664,6 +715,7 @@ body {
     transform: scale(1.5) translate(1000px);
     transform: translate(-50%, -50%);
     transition: transform 1000ms;
+    padding: 40px;
 }
 
 .modal-close {
@@ -685,3 +737,140 @@ body {
     opacity: 0;
     pointer-events: none;
 }
+
+.modal-title {
+    font-weight: 700;
+    font-size: 20px;
+    line-height: 1.15;
+    text-align: center;
+    letter-spacing: 0.03em;
+    padding-bottom: 12px;
+}
+.modal-field{
+    margin-bottom: 10px;
+
+}
+
+.input-wrap {
+    position: relative;
+}
+
+.input-icon {
+    position: absolute;
+    left: 12px;
+    top: 50%;
+    transform: translateY(-50%);
+    transition: fill 250ms linear ;
+}
+
+.modal-text-input {
+    width: 100%;
+    min-height: 40px;
+    border: 1px solid rgba(33, 33, 33, 0.2);
+    box-sizing: border-box;
+    border-radius: 4px;
+    padding-left: 42px;
+    padding-right: 12px;
+    outline: none;
+    transition: border-color 250ms linear ;
+}
+
+.modal-text-input:focus {
+    border-color: var(--accent-color);
+}
+
+.modal-text-input:focus + .input-icon {
+    fill: var(--accent-color);
+}
+
+.form-input-text {
+    font-size: 12px;
+    line-height: 1.16;
+    letter-spacing: 0.01em;  
+    color: var(--main-text-color);
+    margin-bottom: 4px;
+}
+
+.modal-form-text{
+    width: 100%;
+    min-height: 120px;
+    border: 1px solid rgba(33, 33, 33, 0.2);
+    box-sizing: border-box;
+    border-radius: 4px;
+    padding: 12px 16px;
+    resize: none;
+    outline: none;
+    transition: border-color 250ms linear ;
+}
+.modal-form-text:focus {
+    border-color: var(--accent-color);
+}
+
+.modal-form-text::placeholder {
+    font-size: 14px;
+    line-height: 1.16;
+    letter-spacing: 0.01em;  
+    color: rgba(117, 117, 117, 0.5);
+}
+.modal-textarea {
+    margin-bottom: 20px;
+}
+
+.check-item {
+    width: 16px;
+    height: 15px;
+    border: 2px solid #000000;
+    border-radius: 2px;
+    margin-right: 8px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.modal-check:checked + .modal-policy .check-item {
+    background-color: var(--accent-color);
+    border: none;
+}
+
+.modal-policy {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 14px;
+    line-height: 1.71;
+    letter-spacing: 0.03em;
+    color: var(--main-text-color);
+}
+.policy-link {
+    font-size: 14px;
+    line-height: 1.71;
+    letter-spacing: 0.03em;
+    color: var(--accent-color);
+}
+
+
+
+.modal-submit-btn{
+    margin: 0 auto ;
+    background-color: var(--accent-color);
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 1.87;
+    display: flex;
+    align-items: center;
+    text-align: center;
+    letter-spacing: 0.06em;
+    color: var(--header-text-color);
+    border-radius: 4px;
+    min-width: 200px;
+    min-height: 50px;
+    justify-content: center;
+    margin-top: 30px;
+
+}
+
+.modal-submit-btn:hover,
+.modal-submit-btn:focus{
+    background-color: #188ce8;
+}
+
