--- a/css/styles.css
+++ b/css/styles.css
@@ -486,11 +486,10 @@ body {
     margin-top: 20px;
 }
 
-
-.join-title{
+.footer-title{
     margin-bottom: 20px;
     color: var(--contrast-txt-color);
-    font-weight: bold;
+    font-weight: 700;
     font-size: 14px;
     line-height: 1.14;
     letter-spacing: 0.03em;
@@ -498,6 +497,7 @@ body {
     color: var(--header-text-color);
     padding-top: 12px;
 }
+
 .join .list {
     display: flex;
     align-items: center;
@@ -529,29 +529,31 @@ body {
     fill: #ffffff
 }
 
+.subscribe{
+    margin-left: auto;
+}
+
 .subscribe-form {
     display: flex;
 }
 
-.subscribe-title {
-    font-weight: 700;
-    font-size: 14px;
-    line-height: 1.14;
-    letter-spacing: 0.03em;
-    text-transform: uppercase;
-    color: var(--header-text-color);
-    margin-bottom: 20px;
-}
-
 .email {
-    min-width: 358px;
-    min-height: 50px;
+    width: 358px;
+    height: 50px;
     border: 1px solid rgba(255, 255, 255, 0.3);
     box-sizing: border-box;
     filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
     border-radius: 4px;
-
+    display: flex;
+    align-items: center;
+    padding: 0 16px;
+    background-color:  inherit;
+    font-size: 16px;
+    line-height: 1.25;
+    letter-spacing: 0.03em;
+    color: rgba(255, 255, 255, 0.6);
 }
+
 
 .subscribe-btn {
     font-family: Roboto;
@@ -679,6 +681,7 @@ body {
     height: 100%;
     transform: translateY(100%);
     transition: transform 400ms linear;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .projects-list:hover .projects-description {
@@ -773,6 +776,7 @@ body {
     padding-right: 12px;
     outline: none;
     transition: border-color 250ms linear ;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-text-input:focus {
